--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Emilys+Candy&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Sedan+SC&display=swap"
       rel="stylesheet"
     />
     <title>Laiskliidu&apos;s Blog</title>
